src/test/deca/syntax/valid/SansObjet/TestInclude.deca
//Description
//  test de include Math.decah
//
//Réponse
// ok

#include "Math.decah"