src/test/deca/syntax/invalid/SansObjet/includeFileNotFound.deca
//Description
//  test d'un include d'un fichier non existant
//
//Réponse
//  Erreur syntaxique ligne 8
//  Ma.decah: include file not found

#include "Ma.decah"